# TelegramBackup

./: .gitignore  README.md  convert_export.py  flake.nix  lottie_convert.py  package.json  pyproject.toml  requirements.txt
tg_chan/pyro/: convert.py  download_media.py
tg_chan_api/: download_media.py  main.py
tgc/: convert_export.py  convert_media_types.py  tg-blog.html
tgc/pyro/: __main__.py  config.py  consts.py  convert.py  crawl.py  download_media.py  grouper.py  utils.py
tgc/rss/: __main__.py  posts_to_feed.py
tools/: pyproject_update.py
