[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tgc"
description = "Telegram Channel Backup Crawler"
readme = "README.md"
authors = [
    { name = "Azalea Gui", email = "me@hydev.org" }
]
requires-python = ">=3.11"
keywords = ["telegram", "backup"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "toml~=0.10.2",
    "pyrogram~=2.0.70",
    "tgcrypto~=1.2.5",
    "uvloop~=0.17.0",
    "requests~=2.28.1",
    "hypy_utils>=1.0.16",
    'importlib-metadata',
]
dynamic = ["version"]
urls = { Homepage = 'https://github.com/one-among-us/TelegramBackup' }

[tool.setuptools]
py-modules = ["tgc"]
packages = ['tgc']

[tool.setuptools.dynamic]
version = {attr = "tgc.__version__"}

[project.scripts]
twb = "tgc.__main__:run"
